# recipe-lm

./: .dockerignore  .gitignore  Dockerfile  README.md  convert_to_gguf.py  inference.py  inference_results.txt  pyproject.toml  server.py
configs/: default.yaml
data_pipeline/: README.md  checks.py  definitions.py  io_managers.py  resources.py
data_pipeline/assets/: __init__.py  clean.py  download.py  split.py  tokenize.py  train.py
deploy/: README.md
notebooks/: train_unsloth.ipynb
tests/: test_assets.py  test_checks.py
