[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recipe-lm"
version = "0.1.0"
description = "Dagster pipeline for fine-tuning a recipe generation language model"
requires-python = ">=3.10"
dependencies = [
    "dagster",
    "dagster-webserver",
    "datasets",
    "transformers",
    "torch",
    "peft",
    "bitsandbytes",
    "accelerate",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "dagster[test]",
]
colab = [
    "unsloth",
    "trl",
]
serve = [
    "fastapi",
    "uvicorn[standard]",
    "sse-starlette",
]

[tool.dagster]
module_name = "data_pipeline.definitions"

[tool.setuptools.packages.find]
include = ["data_pipeline*"]
